labo8/labo8-destinationrule.yaml
# 公式ドキュメントに載ってて動作検証用に適用したやつ
# https://istio.io/latest/docs/tasks/traffic-management/circuit-breaking/
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpbin
spec:
  host: httpbin
  trafficPolicy:
    connectionPool: # 検証
      tcp:
        maxConnections: 1
      # http:
      #   http1MaxPendingRequests: 1
      #   maxRequestsPerConnection: 1
